[fix]#7984 fav apps popover on small devices

--- a/css/_mobile.scss
+++ b/css/_mobile.scss
@@ -913,6 +913,14 @@ $small-screen: 959px;
 }
 @media screen and (max-width: $small-mobile){
 	body{
+
+		popover popover-content.right {
+		    left: -190px;
+		}
+		popover popover-content.right::before{
+			left: 80%;
+		}
+
 		.rigid-grid > .side-col.three{
 			width: 55%;
 		}
